2013-05-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (save_user_omp): Use user ID instead of name to
	identify user in MODIFY_USER.

2013-05-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (save_container_task_omp): Free format.

2013-05-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (task [details], html-edit-task-form): Correct help
	links.

	* src/html/help.xsl (task_details.html): Remove tasksummary anchor.  Add
	Import Report section.
	(config_details.html, config_editor.html): Correct text about task
	details link.

2013-05-13  Timo Pollmeier  <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (save_container_task_omp): Add elements for observer
	groups and groups plus button.

2013-05-13  Timo Pollmeier  <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (edit_my_settings): Select correct setting from
	get_settings_response for CVE filter.

2013-05-13  Timo Pollmeier  <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (get_tags_response, get_settings_response): New
	empty templates.

2013-05-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (user-tags-window): Add spacing before tags window,
	at least to match spacing on Task Details page.  Capitalise text in
	tooltip, to match other cases.

	* src/html/help.xsl (user-tags.html): Switch to new icon.

2013-05-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (list-window): Match rowspan check for Actions header
	to the check used for the other headers, so that the bottom of the
	Actions header lines up with the others.

2013-05-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (result [result-header]): Always use severity-bar for
	consistency.

2013-05-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_omp.c (get_report): Set error to 1 in XML report plugin too.

2013-05-10  Hani Benhabiles <hani.benhabiles@greenbone.net>
